| Summary: | ASTERISK-16203: Asterisk crashes upon loading the res_jabber module. | ||||
| Reporter: | wubbla (wubbla) | Labels: | |||
| Date Opened: | 2010-06-03 10:57:32 | Date Closed: | 2012-07-16 14:14:58 | ||
| Priority: | Critical | Regression? | No | ||
| Status: | Closed/Complete | Components: | Resources/res_jabber | ||
| Versions: | Frequency of Occurrence | ||||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) asterisk-log.txt ( 1) backtrace_1.8.3.txt ( 2) bt_1.8.3.txt ( 3) bt_full_1.8.3.txt ( 4) gdb_ulugutz.txt ( 5) gdb.txt ( 6) jabber-crash-full-bt.txt ( 7) pak_1.8.3.txt ( 8) thread_1.8.3.txt | |||
| Description: | This happens reproducible. The asterisk-host is a debian lenny 5.0.4 machine with kernel 2.6.32-bpo.3-686. The jabber-server is prosody (version 0.6.1) running on a debian lenny 5.0.4 machine. Logging in with Psi just works fine, so this is definitely a asterisk-related bug... | ||||
| Comments: | By: Paul Belanger (pabelanger) 2010-06-03 11:11:04 Your backtrace is optimized out (see below) --- Thank you for your bug report. In order to move your issue forward, we require a backtrace from the core file produced after the crash. Please see the doc/backtrace.txt file in your Asterisk source directory. Also, be sure you have DONT_OPTIMIZE enabled in menuselect within the Compiler Flags section, then: make install after enabling, reproduce the crash, and then execute the instructions in doc/backtrace.txt. When complete, attach that file to this issue report. Thanks! By: wubbla (wubbla) 2010-06-03 11:33:21 I've now also added the relevant output of the asterisk-process, that shows the incoming/outgoing XML messages of the res_jabber module. Hopefully this helps... By: wubbla (wubbla) 2010-06-15 06:32:57 Is there anything missing...?! By: ulugutz (ulugutz) 2010-06-17 20:54:06 Hi, I'm running Asterisk 1.6.2.5-0ubuntu1 built by buildd @ palmer on a i686 running Linux on 2010-04-16 01:24:06 UTC and Prosody 0.7 final. Asterisk always quits with a seg fault, when connecting to my prosody XMPP server on localhost in client mode. It has no problems connecting to a remote eJabberd 2.0.5 using the same options. So I presume the problem is related to Prosody. Component mode is working as well. Do you still need that backtrace? I could try to recompile it using the DONT_OPTIMIZE flag if need be. By: Paul Belanger (pabelanger) 2010-06-30 08:56:05 Yes, if you are able to provide a backtrace please do. By: ulugutz (ulugutz) 2010-07-06 23:13:35 Hi, I have uploaded my gdb_ulugutz.txt file with the DONT_OPTIMIZE flag set. This time I am using Version 1.6.2.9 straight from the homepage. I modified one thing in the txt-file though: I changed the my domain name to foo.org for privacy reasons ;) If there is anything elso I can do, please let me know. I'll keep running this version for the next couple of weeks in case something comes up. By: ulugutz (ulugutz) 2010-08-30 20:05:34 Hi, do you need any more feedback, because the status is still set to feedback? By: ulugutz (ulugutz) 2010-10-30 21:40:11 Just wanted to let you know: The Bug still exists in the latest Version 1.8. By: ulugutz (ulugutz) 2011-01-07 20:25:58.000-0600 This bug is NOT related to 0018172. Some numbers got mixed up. This is bug ASTERISK-16203 not 14756, as was stated in 0018172. By: Sean Bright (seanbright) 2011-01-29 18:00:16.000-0600 When this crash occurs, what do you get when you type the following commands in GDB: <pre> print pak print pak->from print pak->from->partial</pre> By: ulugutz (ulugutz) 2011-03-15 11:50:27 Sry for taking so long to reply. I had to setup a testing environment for my asterisk. Since I don't have the old 1.6 running I did a complete dump (including pak). I hope this helps. Since the testing system is up and running now I can easily get you more data. By: Matthew Wild (mattj100) 2011-07-07 07:56:04.367-0500 This is happening to me too, and I happen to be the lead developer of Prosody - I would love to see it resolved. Anyone with a clue as to what might be happening here? My suspicion is that Asterisk doesn't like multiple XMPP stanzas in the same network packet. If this is the case then it is very broken. Why not use a standard XMPP library? By: Joshua C. Colp (jcolp) 2012-07-16 14:14:58.071-0500 Fixed in the new res_xmpp module in trunk as of revision 370126. | ||||